--- a/package.json
+++ b/package.json
@@ -30,20 +30,20 @@
   "license": "GPL",
   "devDependencies": {
     "@react-native-cookies/cookies": "^6.2.1",
-    "@types/crypto-js": "^4.1.1",
-    "@types/he": "^1.1.2",
+    "@types/crypto-js": "^4.2.1",
+    "@types/he": "^1.2.3",
     "axios": "^0.27.2",
-    "big-integer": "^1.6.51",
-    "cheerio": "^1.0.0-rc.12",
-    "crypto-js": "^4.1.1",
-    "dayjs": "^1.11.4",
+    "big-integer": "^1.6.52",
+    "cheerio": "1.0.0-rc.12",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.10",
     "he": "^1.2.0",
     "http-server": "^14.1.1",
     "https-proxy-agent": "^7.0.2",
-    "qs": "^6.11.0",
-    "rimraf": "^4.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "qs": "^6.11.2",
+    "rimraf": "^4.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "webdav": "^5.3.1"
