--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-native-cookies/cookies": "^6.2.1",
     "@types/crypto-js": "^4.2.1",
     "@types/he": "^1.2.3",
+    "@types/node": "^20.11.5",
     "axios": "^0.27.2",
     "big-integer": "^1.6.52",
     "cheerio": "1.0.0-rc.12",
