--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/plugin.js",
   "scripts": {
     "serve": "http-server .",
-    "build": "tsc & node ./scripts/generate.js",
+    "build": "tsc && node ./scripts/generate.js",
     "publish": "git checkout master & git merge v0.1 & git push & git checkout v0.1 & git push",
     "test-kugou": "ts-node -T ./plugins/kugou/index.ts",
     "test-navidrome": "ts-node -T ./plugins/navidrome/index.ts",
